--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "silex/silex": "^1.3",
-        "symfony/translation": "^3.0"
+        "symfony/translation": "^3.0",
+        "twig/twig": "^1.24",
+        "symfony/twig-bridge": "^3.0"
     }
 }
