--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
         "silex/silex": "^1.3",
         "symfony/translation": "^3.0",
         "twig/twig": "^1.24",
-        "symfony/twig-bridge": "^3.0"
+        "symfony/twig-bridge": "^3.0",
+        "symfony/config": "^3.0",
+        "symfony/yaml": "^3.0"
     }
 }
