--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "twig/twig": "^1.24",
         "symfony/twig-bridge": "^3.0",
         "symfony/config": "^3.0",
-        "symfony/yaml": "^3.0"
+        "symfony/yaml": "^3.0",
+        "bretrzaun/silex-markdown": "^1.2"
     }
 }
